--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,9 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: apt-get update
+        run: sudo apt-get -y update
+
       - name: Install Poetry
         run: pipx install poetry
 
